third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/more_nested.decompiled.exp
processed 3 tasks
task 0 lines 3-68:  publish [module 0xc0ffee::n {]
Error: compilation errors:
 error: unexpected token
   ┌─ TEMPFILE:37:13
   │
37 │         _t0 : |u64|(|u64|(u64)) has copy = create_multiplier(2);
   │             ^
   │             │
   │             Unexpected ':'
   │             Expected ';'


task 1 lines 71-71:  run 0xc0ffee::n::test_nested_functions
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
task 2 lines 73-73:  run 0xc0ffee::n::test_composed_captures
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
